--- a/philosophy/notes-2021-01.md
+++ b/philosophy/notes-2021-01.md
@@ -1,18 +1,44 @@
 # Notes from videos and podcasts
 
+## Ultra Scalable Ethereum - Modular vs Monolithic Blockchains
+https://www.youtube.com/watch?v=xjxyjgWiqLE
+- Monolithic blockchain: tries to do everything at once in the same spot (consensus (POW, POS), execution (what's happening), data (storage)). BTC, ETH, ATOM, all blockchains are here.
+- All monolithic blockchains are trapped in the scalability-decentralization-security triangle making tradeoffs.
+- 
+
+## Bankless: Is the World Collapsing? Inflation, The Fed, & Macro Markets | Jim Bianco
+https://www.youtube.com/watch?v=xdnMBzMPmqw
+Up to: 50
+- Fed needs to raise interest rates because inflation. Thus bonds raise rates, so people find bonds more worthwhile than stocks (given raised bond yields), so tanks stock market. Usually fed on the side of stock-market as interests align, but inflation divides the two sectors: stock market and populous.
+- forward-guidance, fed speak drops hints because don't want market to be surprised
+- 2022 professional tradfi managers fear most is policy mistake: FED has history of raising interest rates till something breaks: stock market, economy, etc. Seems like FED will raise rates and side with 40% of lower-class unsatisfied Americans, and stock market will get shaky.
+- 2021 crypto prices driven by institutions, but like tech stocks (risk-on asset), should struggle as money moves to safer investments. Eventually (out more than a few years), crypto will break separate from the trad-fi world and not just seen as an investment medium on the 'risky' end of the risk spectrum
+- Predicting that 2022 would continue this choppy crypto market.
+- When times get better, far end of risk spectrum jumps massively--don't want to miss that--just hodl.
+- Expect 2020s to have ~3-4% inflation, not high 10+% inflation
+- View crypto different than tradfi--keep on buying because when cycle turns, it turns fast and don't want to miss that.
+- Big tech is fighting hard to create their own 'metaverse'--Microsoft buying Blizzard.
+- Decentralization is the only true moat
+
+## Bankless: The Great L2 Migration | Cross-Chain L2 Panel
+https://www.youtube.com/watch?v=sLMQXDvdRGM
+- No future for users on ETH layer 1. Main chain not for users anymore, but for other chains
+-
+
+
+
 ## How to Survive in Crypto by Bankless with Cobie
 https://www.youtube.com/watch?v=udgu2O3MZ-Q
 
-- Reality maximalism. Do not let personal preferences shine through to investment theses building. See what is working well and why, look at 'facts on the ground'. 
-    - ie, saw Ethereum was very centralized and was for shady ICOs, but was the right play. 
+- Reality maximalism. Do not let personal preferences shine through to investment theses building. See what is working well and why, look at 'facts on the ground'.
+    - ie, saw Ethereum was very centralized and was for shady ICOs, but was the right play.
     - Analogy: be a leaf in the sky and just ride the wind of crypto movements
 - Note most crypto projects start off centralized. SOL now is similar to what ETH was like ago
-    - First it was BTC thinking ETH is centralized scam chain. Now it's ETH thinking other L1s as centralized scam chains. 
+    - First it was BTC thinking ETH is centralized scam chain. Now it's ETH thinking other L1s as centralized scam chains.
     - Spectrum of decentralization: where do you draw the line: BTC, ETH, ATOM, SOL, LUNA, ONE, NEAR, BSC?
 - Chain maximalism is a trap: both investment and mind trap. Bankless is decentralization maximalism: realized not best performance in the short term.
-- Decentralization as a guiding principle, not a required checkbox? Current non-decentralized projects (AVAX, SOL, etc) compared to silk-road as onboarding ramps. 
-- Regulations clamps down on fair-launch projects, so more regulation safe to do private sale. So many fail-launch projects are scams. 
+- Decentralization as a guiding principle, not a required checkbox? Current non-decentralized projects (AVAX, SOL, etc) compared to silk-road as onboarding ramps.
+- Regulations clamps down on fair-launch projects, so more regulation safe to do private sale. So many fail-launch projects are scams.
 - New L1s are fast because they are centralized. ETH becoming decentralized over time was due to culture of decentralization, not sure if shared with new L1s when they depend on centralization for their only way of competing against ETH: fast throughput.
-- New chains uding PoS and DPoS and inflation rewards--wealth stays at the hands of the vcs--not seemingly becoming more decentralized. + regulation. 
+- New chains uding PoS and DPoS and inflation rewards--wealth stays at the hands of the vcs--not seemingly becoming more decentralized. + regulation.
 - Denominate in ETH
-
