short etc ideas

--- a/analysis/icp-internet-computer.tex
+++ b/analysis/icp-internet-computer.tex
@@ -1,20 +1,19 @@
 \documentclass{../notes}
-\title{Internet Computer}
+\title{Template}
 \begin{document}
 \maketitle
 
-\section{About}
+\section{Summary}
 Dominic Williams: ~2015. 
 Aims to replace entire internet stack, not just applications layer. Maintained by the Dfinity foundation. ICP code not entirely open source. Participation is permissioned and requires standardized hardware. 
 
 
-\section{How does it work}
+\section{Bull thesis}
 Consists of diatacenters around the world. Each datasenter has multiple nodes, and nodes form subnets, which uses a new consenus mechanism called 'subnet relay'. 
+Testing, adding some new thing. thing thing. Nothing
 
-\section{The Network Nervous system}
+\section{Risks}
 
-\section{Tokenomics}
+\section{Criterion}
 
-\section{Roadmap}
-
-
+\end{document}
